# EnvatoTest

./: .gitignore
envato-data-engineering-task/: INSTRUCTIONS.md  README.md  pyproject.toml
envato-data-engineering-task/data/: envato.db
envato-data-engineering-task/src/envato_data_engineering_task/: __init__.py  duckdb_connection.py  duckdb_query.py  entrypoint.py  extract.py  load.py  transform.py
envato-data-engineering-task/tests/test_envato_data_engineering_task/: test_extract.py  test_load.py  test_transform.py
